Edited data source line

--- a/EBP-Assessment.html
+++ b/EBP-Assessment.html
@@ -707,7 +707,7 @@ F Statistic
 </tr>
 </table>
 <hr />
-<p>To answer this problem, I used data from the <a href="https://nhts.ornl.gov/">2017 National Household Travel Survey
+<p>The data I used to answer this problem are from the <a href="https://nhts.ornl.gov/">2017 National Household Travel Survey
 (NHTS)</a> conducted by the Federal Highway Administration.</p>
 <p>To determine whether income predicts the fuel efficiency of a
 household’s vehicle, I ran a regression of fuel economy on a vector of
